fix project height to align projects properly in grid
135px accomodates slightly larger Wigrum font

--- a/public/css/less/custom.less
+++ b/public/css/less/custom.less
@@ -194,7 +194,7 @@ footer .social-footer{margin-top:0px;padding:11px 0px 0px 0px;height:26px;margin
 
 /*About*/
 .about-headpicture{background-color:#CCC;width:940px;height:250px;float:left;margin-bottom:20px;border-bottom:solid 3px #ccc;}
-.topic-container{padding:5px 0; min-height: 125px;}
+.topic-container{padding:5px 0; min-height: 135px;}
 .topic-container p, .topic-container ul {margin-left: 75px}
 .topic-icon{width:64px;height:64px;float:left;margin-right:10px; font-size: 42px; text-align: center;}
 .topic-icon img {max-width:64px;height:auto;max-height:84px}
